--- a/app/views/family_environments/index.html.erb
+++ b/app/views/family_environments/index.html.erb
@@ -20,8 +20,8 @@
         <td><%= family_environment.birthday %></td>
         <td><%= family_environment.age %></td>
         <td><%= family_environment.family %></td>
-        <td><%= link_to 'Show', student_family_environment_path(@student.id,family_environment.id), class: "btn btn-outline-success"%></td>
-        <td><%= link_to 'Edit', edit_student_family_environment_path(@student.id,family_environment.id), class: "btn btn-outline-success" %></td>
+        <td><%= link_to 'Show', user_student_family_environment_path(family_environment.id, student_id: @student.id,user_id: @user.id), class: "btn btn-outline-success"%></td>
+        <td><%= link_to 'Edit', edit_user_student_family_environment_path(family_environment.id, student_id: @student.id,user_id: @user.id), class: "btn btn-outline-success" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -29,4 +29,4 @@
 
 <br>
 
-<%= link_to 'New Family Environment', new_student_family_environment_path, class: "btn btn-outline-success" %>
+<%= link_to 'New Family Environment', new_user_student_family_environment_path, class: "btn btn-outline-success" %>
