--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
           <ul class="navbar-nav ">
             <% if user_signed_in? %>
               <li class="nav-item active">
-                <%= link_to 'マイページ', mypage_students_path, class: 'nav-link' %>
+                <%= link_to 'マイページ', user_path(current_user), class: 'nav-link' %>
               </li>
               <li class="nav-item active">
                 <%= link_to "ログアウト", destroy_user_session_path, class: 'nav-link ' %>
