--- a/app/views/comments/_index.html.erb
+++ b/app/views/comments/_index.html.erb
@@ -3,6 +3,7 @@
     <% if comment.id.present? %>
       <li>
         <p><%= comment.content %></p>
+        <p><%= comment.user.email %></p>
       </li>
     <% end %>
   <% end %>
