--- a/app/views/family_environments/new.html.erb
+++ b/app/views/family_environments/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', family_environment: @family_environment %>
 
-<%= link_to 'Back', user_student_family_environments_path %>
+<%= link_to 'マイページ', user_path(current_user) ,class: "btn btn-outline-success"%>
