--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
 <p>【　提出期限：６月３０日（木）　】期日内提出のご協力の程お願い申し上げます。</p>
 <% if current_user.try(:admin?) %>
   <%= link_to '管理画面', rails_admin_path ,class: "btn btn-outline-success"%>
+  <%= link_to 'コメントルーム', rails_admin_path ,class: "btn btn-outline-success"%>
 <% end %>
 <table class="table table-hover">
   <% @students.each do |student| %>
