--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,4 +1,4 @@
 <h1>New Student</h1>
 
 <%= render 'form', student: @student %>
-<%= link_to 'マイページ', user_path(current_user) %>
+<%= link_to 'マイページ', user_path(current_user) ,class: "btn btn-outline-success"%>
