--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,12 @@
                 <%= link_to "ログイン", new_user_session_path, class: 'nav-link ' %>
               </li>
             <% end %>
+              <li class="nav-item active">
+              <%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, method: :post, class: 'nav-link '%>
+              </li>
+              <li class="nav-item active">
+              <%= link_to 'ゲストログイン（管理者用）', users_admin_guest_sign_in_path, method: :post, class: 'nav-link '%>
+              </li>
           </ul>
         </div>
       </nav>
