学校へ通知をクリックでコンタクトルームを作成し、メールが送信されるように設定

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [:contact, comment], url:user_contact_comments_path(comment.id, contact_id: @contact.id, user_id: @user.id )) do |form| %>
+<%= form_with(model: [:contact, comment], url: user_contact_comments_path(comment, user_id: @user, contact_id: @contact)) do |form| %>
   <% if comment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
