--- a/app/views/students/report.html.erb
+++ b/app/views/students/report.html.erb
@@ -1,4 +1,18 @@
-<h4>学校にメールを送信しました</h4>
+保護者側
 
-<!-- このメール内にコメントルームの案内を入れる。
-マイページにコメントルームへのリンクがある -->
+
+<div>このメールは、送信専用の自動送信メールです。</div>
+<p>メールに直接ご返信いただきましてもご返信致しかねます為、ご連絡はコメント欄よりお願い致します。</p>
+
+<p>メールアドレス: <%= @user.email %></p>
+
+<p>コメント投稿がありました。</p>
+<p>詳細は、下記URLよりご確認ください。（ログイン後ご確認ください。）</p>
+
+================
+京都市立東中学校
+〒600-0000
+京都市中京区大分通飲都上ル河戸町123-1
+TEL：075-123-4567
+E-mail： kyotohigashi-c@city.kyoto.jp
+================
