--- a/app/views/comments/index.js.erb
+++ b/app/views/comments/index.js.erb
@@ -1,3 +1,3 @@
-$("#comments_area").html("<%= j(render 'comments/index', { comments: @comment.contact.comments, contact: @comment.contact, user: @user }) %>");
+$("#comments_area").html("<%= j(render 'comments/index', { user: @user, comments: @comment.contact.comments, contact: @comment.contact }) %>");
 $("textarea").val('');
 $("#notice").html("<%= j flash[:notice] %>");
