--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -1,14 +1,8 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
 
-    <div class="contact-text">
-      <p><strong>連絡ツール</strong>：<%= @contact.title %></p>
-    </div>
-
-    <strong>【登録内容変更の場合】</strong>
-    <p>お手数ですが、変更箇所を下記フォームにご入力後、メール送信をクリックしてください。</p>
-    <p>連絡内容</p>
-
+    <strong>【ご登録内容変更の場合】</strong>
+    <p>お手数ですが、変更箇所を下記フォームにご入力後、登録をクリックしてください。</p>
      <!-- このcomments_areaというHTMLのidを取得して、そのdivの部分だけを更新する -->
      <div id="comments_area">
        <!-- 投稿されたコメント一覧をブログの詳細ページに表示するためのrender -->
