--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,6 +43,5 @@
 </table>
   <div>新規生徒の登録は下記よりお手続きください。</div>
   <%= link_to '基本情報登録', new_user_student_path(user_id: @user.id), class: "btn btn-outline-success" %>
-  <div>登録内容を変更いただいた場合は下記よりご連絡ください。</div>
-<%=link_to '連絡掲示板を作る', new_user_contact_path(user_id: @user.id), class: "btn btn-outline-success" unless @contact.present?%>
-<%=link_to '連絡掲示板をみる', user_contact_path(@contact.id, user_id: @user.id), class: "btn btn-outline-success" if @contact.present?%>
+  <div>ご登録内容を変更いただいた場合は、下記よりご連絡ください。</div>
+<%=link_to '変更内容を学校へ通知', user_contact_path(@contact.id, user_id: @user.id), class: "btn btn-outline-success" if @contact.present?%>
