commentcontrollerのcomment_paramsのコード修正

--- a/app/views/emergency_contacts/_form.html.erb
+++ b/app/views/emergency_contacts/_form.html.erb
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="columns is-centered">
         <label for="formGroupExampleInput2" class="form-label"><%= form.label :name, "name", class: "label" %></label>
-        <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :name %>
+        <input type="text" placeholder="山田　花子" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :name %>
       <div class="column is-6">
         <label for="formGroupExampleInput2" class="form-label"><%= form.label :relationship, "relationship", class: "label" %></label>
         <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :relationship %>
