メールに保護者名、生徒名、メールアドレスを記載するように修正

--- a/app/views/report_mailer/send_message_to_school.text.erb
+++ b/app/views/report_mailer/send_message_to_school.text.erb
@@ -1,7 +1,11 @@
-<p></p>生徒情報の登録が完了しました。
-<!-- メールアドレス:  @user.email %> -->
+関係者各位
+
+生徒情報の登録を受け付けました。
 
 管理画面より確認の上、保護者への連絡が必要な場合は、
-チャットルームより連絡してください。
+連絡欄より連絡してください。
+
+生徒名: <%= @student.student_name %> さん
+メールアドレス: <%= @user.email %>
 
 <%= @contact_room_url %>
