--- a/app/views/report_mailer/welcome_email.text.erb
+++ b/app/views/report_mailer/welcome_email.text.erb
@@ -1,13 +1,18 @@
 ------------------------------------
 このメールは、送信専用の自動送信メールです。
 メールに直接ご返信いただきましてもご返信致しかねます為、
-ご連絡はコメント欄よりお願い致します。
+ご連絡は連絡欄よりお願い致します。
 ------------------------------------
-※student.pearents_name 様
+<%= @student.parents_name %> 様
 
-ご登録情報について、コメント投稿がありました。
-詳細は、下記URLよりご確認ください。（ログイン後ご確認ください。）
+この度は、ご登録ありがとうございました。
 
+■変更・修正について
+ご登録内容に変更等が必要な場合は、ログイン後、お手続きください。
+
+また、お手数をお掛け致しますが、変更内容を下記連絡欄よりご連絡下さいます様お願い致します。
+
+■連絡欄
 <%= @contact_room_url %>
 
 ================
