--- a/app/views/emergency_contacts/_form.html.erb
+++ b/app/views/emergency_contacts/_form.html.erb
@@ -14,16 +14,16 @@
     <div class="container">
       <div class="columns is-centered">
         <label for="formGroupExampleInput2" class="form-label"><%= form.label :name, "name", class: "label" %></label>
-        <input type="text" placeholder="山田　花子" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :name %>
+        <input type="text" placeholder="山田 花子" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :name %>
       <div class="column is-6">
         <label for="formGroupExampleInput2" class="form-label"><%= form.label :relationship, "relationship", class: "label" %></label>
-        <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :relationship %>
+        <input type="text_field" placeholder="祖母" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :relationship %>
       <div class="column is-6">
         <label for="formGroupExampleInput2" class="form-label"><%= form.label :contact_address, "contact_address", class: "label" %></label>
-        <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :contact_address %>
+        <input type="text_field" placeholder="例）祖母宅、勤務先など" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :contact_address %>
       <div class="column is-6">
         <label for="formGroupExampleInput2" class="form-label"><%= form.label :telephone, "telephone", class: "label" %></label>
-        <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :telephone %>
+        <input type="text_field" placeholder="090-0000-0000" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :telephone %>
 
 
   <div class="actions">
