--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -15,10 +15,10 @@
     <div class="container">
       <div class="columns is-centered">
         <label for="formGroupExampleInput2" class="form-label"><%= form.label :student_furigana, "student_furigana", class: "label" %></label>
-        <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :student_furigana %>
+        <input type="text_field" placeholder="やまだ はなこ" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :student_furigana %>
       <div class="column is-6">
         <label for="formGroupExampleInput2" class="form-label"><%= form.label :student_name, "student_name", class: "label" %></label>
-        <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :student_name %>
+        <input type="text_field" placeholder="山田 花子" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :student_name %>
 
       <!-- <div class="form-check form-check-inline">
         <label for="formGroupExampleInput2" class="form-label"> form.label :sex, "sex", class: "label" %></label>
@@ -30,40 +30,40 @@
 
       <div class="column is-6">
         <label for="formGroupExampleInput2" class="form-label"><%= form.label :sex, "sex", class: "label" %></label>
-        <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :sex %>
+        <input type="text_field" placeholder="女"  class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :sex %>
 
       <div class="column is-6">
         <label for="formGroupExampleInput2" class="form-label"><%= form.label :birthday, "birthday", class: "label" %></label>
-        <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :birthday %>
+        <input type="text_field" placeholder="2010年1月1日" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :birthday %>
 
 
       <div class="column is-6">
         <label for="formGroupExampleInput2" class="form-label"><%= form.label :telephone, "telephone", class: "label" %></label>
-        <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :telephone %>
+        <input type="text_field" placeholder="075-000-0000" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :telephone %>
 
       <div class="column is-6">
         <label for="formGroupExampleInput2" class="form-label"><%= form.label :cellphone, "cellphone", class: "label" %></label>
-        <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :cellphone %>
+        <input type="text_field" placeholder="090-000-0000" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :cellphone %>
       <div class="column is-6">
         <label for="formGroupExampleInput2" class="form-label"><%= form.label :post_code, "post_code", class: "label" %></label>
-        <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :post_code %>
+        <input type="text_field" placeholder="000-0000" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :post_code %>
       <div class="column is-6">
         <label for="formGroupExampleInput2" class="form-label"><%= form.label :address, "address", class: "label" %></label>
-        <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :address %>
+        <input type="text_field" placeholder="京都府京都市中京区御所南1234" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :address %>
 
       <div class="column is-6">
         <label for="formGroupExampleInput2" class="form-label"><%= form.label :parents_furigana, "parents_furigana", class: "label" %></label>
-        <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :parents_furigana %>
+        <input type="text_field" placeholder="やまだ たかし" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :parents_furigana %>
 
       <div class="column is-6">
         <label for="formGroupExampleInput2" class="form-label"><%= form.label :parents_name, "parents_name", class: "label" %></label>
-        <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :parents_name %>
+        <input type="text_field" placeholder="山田 隆" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :parents_name %>
 
       <div class="column is-6">
         <label for="formGroupExampleInput2" class="form-label"><%= form.label :relationship, "relationship", class: "label" %></label>
-        <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :relationship %>
+        <input type="text_field" placeholder="父" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :relationship %>
 
       <div class="actions">
-        <%= form.submit class: "button" ,class: "btn btn-outline-success"%>
+        <%= form.submit class: "button" ,class: "btn btn-outline-success" %>
       </div>
 <% end %>
