--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -10,12 +10,12 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :content %>
-    <%= form.text_area :content %>
+  <div class="form-floating">
+    <textarea class="form-control" <%= form.text_area :content%></textarea>
+    <label for="floatingTextarea">Comments</label>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class: "button" ,class: "btn btn-outline-success" %>
   </div>
 <% end %>
