--- a/app/views/family_environments/_form.html.erb
+++ b/app/views/family_environments/_form.html.erb
@@ -15,23 +15,23 @@
     <div class="container">
       <div class="columns is-centered">
          <label for="formGroupExampleInput2" class="form-label"><%= form.label :student_furigana, "続柄", class: "label" %></label>
-         <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :relationship %>
+         <input type="text_field" placeholder="弟" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :relationship %>
       <div class="column is-6">
          <label for="formGroupExampleInput2" class="form-label"><%= form.label :name, "氏名", class: "label" %></label>
-         <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :name %>
+         <input type="text_field" placeholder="山田 太郎" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :name %>
 
       <div class="column is-6">
          <label for="formGroupExampleInput2" class="form-label"><%= form.label :birthday, "生年月日", class: "label" %></label>
-         <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :birthday %>
+         <input type="text_field" placeholder="2011年1月1日" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :birthday %>
 
 
       <div class="column is-6">
          <label for="formGroupExampleInput2" class="form-label"><%= form.label :age, "年齢", class: "label" %></label>
-         <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :age %>
+         <input type="text_field" placeholder="10歳" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :age %>
 
       <div class="column is-6">
          <label for="formGroupExampleInput2" class="form-label"><%= form.label :family, "兄弟姉妹の校園名・学年・組/保護者・同居人の職業", class: "label" %></label>
-         <input type="text_field" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :family %>
+         <input type="text_field" placeholder="京都東小学校5年3組" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :family %>
 
   <div class="actions">
     <%= form.submit class: "button" ,class: "btn btn-outline-success"%>
