コメントと同時にメール送信

--- a/app/views/comments/index.js.erb
+++ b/app/views/comments/index.js.erb
@@ -1,3 +1,7 @@
+// $("#comments_area").html("<%= j(render 'comments/index', { student: @student, user: @user, comments: @comment.contact.comments, contact: @comment.contact }) %>");
+// $("textarea").val('');
+// $("#notice").html("<%= j flash[:notice] %>");
+
 $("#comments_area").html("<%= j(render 'comments/index', { user: @user, comments: @comment.contact.comments, contact: @comment.contact }) %>");
 $("textarea").val('');
 $("#notice").html("<%= j flash[:notice] %>");
