--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -2,7 +2,7 @@
   <p id="notice"><%= notice %></p>
 
     <strong>【ご登録内容変更の場合】</strong>
-    <p>お手数ですが、変更箇所を下記フォームにご入力後、登録をクリックしてください。</p>
+    <p>変更箇所を下記フォームにご入力後、登録をクリックしてください。</p>
      <!-- このcomments_areaというHTMLのidを取得して、そのdivの部分だけを更新する -->
      <div id="comments_area">
        <!-- 投稿されたコメント一覧をブログの詳細ページに表示するためのrender -->
