--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
   </head>
 <header>
+  <body>
   <body style="padding-top: 4rem">
     <% if flash[:notice] %>
       <div class="notification is-info">
