--- a/app/assets/stylesheets/students.scss
+++ b/app/assets/stylesheets/students.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the students controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+// header { position: fixed; top: 0; left: 0; }
+// body { padding-top: 70px; }
+// footer { margin-top: auto; }
