--- a/app/assets/stylesheets/students.scss
+++ b/app/assets/stylesheets/students.scss
@@ -1,6 +1,54 @@
 // Place all the styles related to the students controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
-// header { position: fixed; top: 0; left: 0; }
+
+// header { position:  }
 // body { padding-top: 70px; }
-// footer { margin-top: auto; }
+
+
+html {
+  height: 200%;
+}
+
+body {
+  height: 100%;
+}
+.wrapper{
+  min-height: 10px;
+  position: relative;
+  padding-bottom: 100px;
+}
+.footer{
+  width: 100%;
+  height: 100px;
+  position: absolute;
+  bottom: 0;
+}
+// .container{
+//   // position: relative;
+// }
+
+
+// * {
+//   margin:0; padding:0;
+// }
+// header {
+//   width: 100%;
+//   padding: 15px 0;
+//   margin: 0 auto;
+//   text-align: center;
+//   background-color: #D3D3D3;
+// }
+// .container{
+//   display: flex;
+//   flex-direction: column;
+//   min-height: 100vh;
+// }
+// footer {
+//   margin-top: auto;
+//   width: 100%;
+//   height: 120px;
+//   text-align: center;
+//   padding: 50px 0;
+//   background-color: #D3D3D3;
+// }
