--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+// html {
+//   // font-size: 62.5%;
+//   /* 追記 */
+//   height: 200%;
+// }
+//
+// body {
+//   /* 追記,削除 */
+//   height: 100%;
+// }
+//
+// .footer{
+//   width: 100%;
+//   height: 100px;
+//   position: absolute;
+//   bottom: 0;
+// }
+// .container{
+//   position: relative;
+// }
