--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,38 +8,36 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <title>One</title>
-
   </head>
-<header>
-  <body>
-  <body style="padding-top: 4rem">
-    <% if flash[:notice] %>
+  <header>
+    <body>
+      <% if flash[:notice] %>
       <div class="notification is-info">
-        <p class="notice"><%= notice %></p>
-      </div>
-    <% end %>
+      <p class="notice"><%= notice %></p>
+    </div>
+      <% end %>
     <% if flash[:alert] %>
       <div class="notification is-danger">
         <p class="alert"><%= alert %></p>
       </div>
     <% end %>
 
-      <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light ">
-        <%= link_to "top", root_path, class: 'navbar-brand ' %>
-        <div id="Navber ">
-          <ul class="navbar-nav ">
-            <% if user_signed_in? %>
-              <li class="nav-item active">
-                <%= link_to 'マイページ', user_path(current_user), class: 'nav-link' %>
-              </li>
-              <li class="nav-item active">
-                <%= link_to "ログアウト", destroy_user_session_path, class: 'nav-link ' %>
-              </li>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+      <%= link_to "top", root_path, class: 'navbar-brand ' %>
+      <div id="Navber ">
+        <ul class="navbar-nav ">
+          <% if user_signed_in? %>
+            <li class="nav-item active">
+              <%= link_to 'マイページ', user_path(current_user), class: 'nav-link' %>
+            </li>
+            <li class="nav-item active">
+              <%= link_to "ログアウト", destroy_user_session_path, class: 'nav-link ' %>
+            </li>
           <% else %>
-              <li class="nav-item active">
-                <%= link_to "新規登録", new_user_registration_path, class: 'nav-link ' %>
-              </li>
-              <li class="nav-item active">
+            <li class="nav-item active">
+              <%= link_to "新規登録", new_user_registration_path, class: 'nav-link ' %>
+            </li>
+            <li class="nav-item active">
                 <%= link_to "ログイン", new_user_session_path, class: 'nav-link ' %>
               </li>
             <% end %>
@@ -53,16 +51,18 @@
         </div>
       </nav>
     </header>
-    <div class="container">
+  <div class="wrapper">
+  <div class="container">
     <%= yield %>
   </div>
 
-  <footer class=" fixed-bottom bg-light text-center text-lg-start">
+  <footer class=" bg-light text-center text-lg-start ">
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2020 Copyright:
       <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
     </div>
   </footer>
+</div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
