--- a/app/views/report_mailer/alert_comment.text.erb
+++ b/app/views/report_mailer/alert_comment.text.erb
@@ -3,10 +3,10 @@
 メールに直接ご返信いただきましてもご返信致しかねます為、
 ご連絡は連絡欄よりお願い致します。
 -----------------
-生徒名：<%= @user.students.first.parents_name %>さん
 
+連絡欄へ投稿がありました。
 下記連絡欄より詳細をご確認ください。
-<%= @contact_room_url %>
+<%= @url %>
 
 ================
 京都市立東中学校
