--- a/app/views/report_mailer/notice_comment.text.erb
+++ b/app/views/report_mailer/notice_comment.text.erb
@@ -5,7 +5,6 @@
 管理画面より確認の上、保護者への連絡が必要な場合は、
 連絡欄より連絡してください。
 
-生徒名: <%= @user.students.first.parents_name %> さん
 メールアドレス: <%= @user.email %>
 
-<%= @contact_room_url %>
+<%= @url %>
