--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,5 @@
-<!-- <style>
-  .footer{
-  position: absolute;
-  bottom: 0;
-  }
-</style> -->
 <div class="container">
-<p>【　提出期限：６月３０日（木）　】期日内提出のご協力の程お願い申し上げます。</p>
+<p><strong><font color="red">【　提出期限：６月３０日（木）　】</font></strong>期日内提出のご協力の程お願い申し上げます。</p>
 <% if current_user.try(:admin?) %>
   <%= link_to '管理画面', rails_admin_path ,class: "btn btn-outline-success"%>
 <% end %>
@@ -71,7 +65,7 @@
         <br>TEL：075-123-4567
         <br>E-mail： kyotohigashi-c@city.kyoto.jp</p>
         <% if @contact.present?%>
-          <p>ご登録内容を変更いただいた場合は、<%=link_to '連絡欄', user_contact_path(@contact.id, user_id: @user.id) %>よりご連絡ください。</p>
+          <p><strong>ご登録内容を変更後は、<strong><%=link_to '連絡欄', user_contact_path(@contact.id, user_id: @user.id) %></strong>よりご連絡ください。</strong></p>
         <% end %>
       </div>
     </div>
