--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,8 @@
           </ul>
         </div>
       </nav>
-    </header>
+    </body>
+  </header>
   <div class="wrapper">
   <div class="container">
     <%= yield %>
