--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,14 +53,15 @@
     </body>
   </header>
   <div class="wrapper">
-  <div class="container">
-    <%= yield %>
-  </div>
+    <div class=min-vh-100 >
+      <div class="container">
+        <%= yield %>
+      </div>
+    </div>
 
   <footer class=" bg-light text-center text-lg-start ">
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      © 2020 Copyright:
-      <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+      <p class="text-dark">One</p>
     </div>
   </footer>
 </div>
