--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -45,6 +45,8 @@
 </table>
 </div>
 </div>
+
+<div id="footerWrap">
 <footer class="bg-light text-center text-lg-start">
   <div class="container p-4">
     <div class="row">
