topページに機能説明追記

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -4,5 +4,15 @@
       <h2>One</h2>
       <%= image_tag("1542104318.png") %>
     </div>
+    <div class="container">
+      <h4>■ For parents ■</h4>
+      <p>初めに「基本情報登録」より、お子様の基本情報をご登録下さい。続いて「家庭環境調査」「緊急連絡先」全ての登録が完了次第、新規登録通知をクリックしてください。</p>
+      <p>クリック後、学校、保護者の双方に自動配信メールが送信されます。ご登録内容の修正等、何かございましたら連絡欄よりご連絡ください。</p>
+
+      <h4>■ For school ■</h4>
+      <p>保護者より、生徒情報の登録が完了次第、新規登録受付のメールが送信されます。</p>
+      <p>管理画面より確認の上、保護者への連絡が必要な場合は、連絡欄より連絡してください。</p>
+      <p>連絡欄へは、メールに記載のURLよりご確認いただけます。</p>
+    </div>
   </div>
 </div>
