--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
       </div>
     <% end %>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+    <nav class=" fixed-top navbar navbar-expand-lg navbar-light bg-light ">
       <%= link_to "top", root_path, class: 'navbar-brand ' %>
       <div id="Navber ">
         <ul class="navbar-nav ">
@@ -53,18 +53,18 @@
     </body>
   </header>
   <div class="wrapper">
-    <div class=min-vh-100 >
-      <div class="container">
+    <div class="container">
+      <div class=min-vh-100 >
         <%= yield %>
       </div>
     </div>
 
-  <footer class=" bg-light text-center text-lg-start ">
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      <p class="text-dark">One</p>
-    </div>
-  </footer>
-</div>
+    <footer class="bg-light text-center text-lg-start">
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2) ;">
+        <p>one</p>
+      </div>
+    </footer>
+
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
