Specを書くための準備

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,17 +53,18 @@
     </body>
   </header>
   <div class="wrapper">
-    <div class="container">
-      <div class=min-vh-100 >
+    <div class=min-vh-100 >
+      <div class="container">
         <%= yield %>
       </div>
     </div>
+  </div
 
-    <footer class="bg-light text-center text-lg-start">
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2) ;">
-        <p>one</p>
-      </div>
-    </footer>
+  <footer class="bg-light text-center text-lg-start">
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2) ;">
+      <p>one</p>
+    </div>
+  </footer>
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
