--- a/app/assets/stylesheets/students.scss
+++ b/app/assets/stylesheets/students.scss
@@ -1,16 +1,24 @@
 // Place all the styles related to the students controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
-body { padding-top: 70px; }
+// body { padding-top: 70px; }
+
+body {
+  padding-top: 70px;
+  display: flex;
+  flex-flow: column;
+  min-height: 100vh;
+}
+
 .wrapper{
-  min-height: 10px;
-  position: relative;
+  flex: 1;
 }
 .footer{
-  width: 100%;
-  height: 100px;
   position: absolute;
   bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 30px;
 }
 // html {
 //   position: relative;
