--- a/app/views/emergency_contacts/index.html.erb
+++ b/app/views/emergency_contacts/index.html.erb
@@ -1,12 +1,12 @@
-<h1>Emergency Contacts</h1>
+<h3>緊急連絡先</h3>
 
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Relationship</th>
-      <th>Contact address</th>
-      <th>Telephone</th>
+      <th>氏名</th>
+      <th>続柄</th>
+      <th>連絡先</th>
+      <th>電話番号</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,8 +19,8 @@
         <td><%= emergency_contact.contact_address %></td>
         <td><%= emergency_contact.telephone %></td>
 
-        <td><%= link_to 'Show', user_student_emergency_contact_path(emergency_contact.id, student_id: @student.id, user_id: @user.id), class: "btn btn-outline-success"%></td>
-        <td><%= link_to 'Edit', edit_user_student_emergency_contact_path(emergency_contact.id, student_id: @student.id, user_id: @user.id), class: "btn btn-outline-success" %></td>
+        <td><%= link_to '詳細', user_student_emergency_contact_path(emergency_contact.id, student_id: @student.id, user_id: @user.id), class: "btn btn-outline-success"%></td>
+        <td><%= link_to '編集', edit_user_student_emergency_contact_path(emergency_contact.id, student_id: @student.id, user_id: @user.id), class: "btn btn-outline-success" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Emergency Contact', new_user_student_emergency_contact_path , class: "btn btn-outline-success"%>
+<%= link_to '新規登録', new_user_student_emergency_contact_path , class: "btn btn-outline-success"%>
