--- a/app/views/emergency_contacts/show.html.erb
+++ b/app/views/emergency_contacts/show.html.erb
@@ -15,5 +15,5 @@
   <input type="text" class="form-control" id="formGroupExampleInput2" placeholder=<%= @emergency_contact.telephone %>>
 </div>
 
-<%= link_to 'Edit', edit_user_student_emergency_contact_path(@emergency_contact.id, student_id:@student.id, user_id: @user.id) ,class: "btn btn-outline-success"%> |
+<%= link_to '編集', edit_user_student_emergency_contact_path(@emergency_contact.id, student_id:@student.id, user_id: @user.id) ,class: "btn btn-outline-success"%> |
 <%= link_to 'マイページ', user_path(current_user) ,class: "btn btn-outline-success"%>
