--- a/app/views/family_environments/show.html.erb
+++ b/app/views/family_environments/show.html.erb
@@ -1,3 +1,5 @@
+<h1>緊急連絡先</h1>
+
 <div class="mb-3">
   <label for="formGroupExampleInput" class="form-label">続柄</label>
   <input type="text" class="form-control" id="formGroupExampleInput" placeholder=<%=@family_environment.relationship %>>
@@ -19,5 +21,5 @@
   <input type="text" class="form-control" id="formGroupExampleInput" placeholder=<%=@family_environment.family %>>
 </div>
 
-<%= link_to 'Edit', edit_user_student_family_environment_path(@family_environment.id, student_id: @student.id, user_id: @user.id) ,class: "btn btn-outline-success" %> |
+<%= link_to '編集', edit_user_student_family_environment_path(@family_environment.id, student_id: @student.id, user_id: @user.id) ,class: "btn btn-outline-success" %> |
 <%= link_to 'マイページ', user_path(current_user) ,class: "btn btn-outline-success" %>
