--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -44,6 +44,6 @@
   <input type="text" class="form-control" id="formGroupExampleInput2" placeholder=<%= @student.relationship %>>
 
 </div>
-<%= link_to 'Edit', edit_user_student_path(@student)  ,class: "btn btn-outline-success"%>
+<%= link_to '編集', edit_user_student_path(@student)  ,class: "btn btn-outline-success"%>
 <%= link_to 'マイページ', user_path(current_user)  ,class: "btn btn-outline-success"%>
 </div>
